<resources>
    <string name="app_name">PlaylistMaker</string>
    <string name="playlist_maker">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="settings">Настройки</string>
    <string name="library">Медиатека</string>
    <string name="clear_search">Очистить поиск</string>
    <string name="back">Назад</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="forward">Вперед</string>
    <string name="artWork">Обложка трека</string>

    <string name="sharePlaylist">Поделиться</string>
    <string name="shareTracksInPlaylist">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="editPlaylist">Редактировать информацию</string>
    <string name="edit">Редактировать</string>
    <string name="save">Сохранить</string>
    <string name="deletePlaylist">Удалить плейлист</string>
    <string name="deletePlaylistMessage">Хотите удалить плейлист?</string>
    <string name="deleteTrackMessage">Хотите удалить трек?</string>

    <string name="completePlaylistAdding">Завершить создание плейлиста?</string>
    <string name="lostAllData">Все несохраненные данные будут потеряны</string>

    <string name="cancellation">Отмена</string>
    <string name="complete">Завершить</string>

    <string name="titleEditTextHint">Название*</string>
    <string name="descriptionEditTextHint">Описание</string>

    <string name="permissionDialogMessage">Разрешить приложению «Playlist Maker» доступ к фото?</string>
    <string name="permissionNegativeBtn">Нет</string>
    <string name="permissionPositiveBtn">Да</string>

    <string name="fav_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="empty_library">Ваша медиатека пуста</string>
    <string name="empty_playlists">Вы не создали \nни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>

    <string name="androidDevUrl">https://practicum.yandex.ru/profile/android-developer/</string>
    <string name="emailSendTo">prooo.01@mail.ru</string>
    <string name="emailThemeMessage">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="messageToDevelopers">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="agreementUrl">https://yandex.ru/legal/practicum_offer/ru/</string>
    <string name="empty_error">Ничего не нашлось</string>
    <string name="network_error">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="refresh">Обновить</string>
    <string name="history_message">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="loading">Загрузка…</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="play_track">Играть</string>
    <string name="add_to_fav">Добавить в избранное</string>
    <string name="duration_text">Длительность</string>
    <string name="album_text">Альбом</string>
    <string name="country_text">Страна</string>
    <string name="genre_text">Жанр</string>
    <string name="year_text">Год</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_playlist">Создать</string>


    <plurals name="tracksCountInPlaylist">
        <item quantity="one">%d трек</item>
        <item quantity="few">%d трека</item>
        <item quantity="many">%d треков</item>
        <item quantity="other">%d треков</item>
    </plurals>

    <plurals name="tracksTotalTimeInPlaylist">
        <item quantity="one">%d минута</item>
        <item quantity="few">%d минуты</item>
        <item quantity="many">%d минут</item>
        <item quantity="other">%d минут</item>
    </plurals>

    <string name="playlistCreatedMessage">Плейлист %1$s создан</string>
    <string name="trackAlreadyExistsMessage">Трек уже добавлен в плейлист %1$s</string>
    <string name="trackSuccessAddedMessage">Добавлено в плейлист %1$s</string>
</resources>