<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="@dimen/padding_16"
    android:paddingEnd="@dimen/padding_16"
    android:paddingTop="14dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="24dp"
        style="@style/linearPaddings">
        <ImageView
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back_24"
            android:layout_gravity="center"
            android:contentDescription="@string/back"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            style="@style/headerTextStyle"
            android:text="@string/settings" />
    </LinearLayout>

<!--    я не знаю, как сделать text и switch в одной кнопке поэтому оставил так-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="11dp"
        android:paddingTop="11dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/defaultTextStyle"
            android:text="@string/dark_theme"/>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            app:trackTint="@color/switch_track_tint"
            app:thumbTint="@color/switch_thumb_tint"
            />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/shareBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/share"
        android:drawableEnd="@drawable/ic_share_24"
        style="@style/settingsBtnStyle"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/supportBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/support"
        android:drawableEnd="@drawable/ic_support_24"
        style="@style/settingsBtnStyle"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/agreementBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_agreement"
        android:drawableEnd="@drawable/ic_back_arrow_24"
        style="@style/settingsBtnStyle"
        />

</LinearLayout>