<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".library.ui.fragments.playlists.PlaylistsFragment">

    <Button
        android:id="@+id/newPlaylistBtn"
        style="@style/defaultBtnStyle"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_playlist" />

    <LinearLayout
        android:id="@+id/emptyErrorView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:visibility="gone"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="46dp"
            android:contentDescription="@string/empty_error"
            android:src="@drawable/ic_empty_result_120" />

        <TextView
            style="@style/mediumTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/empty_playlists" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/playlistsRecycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingVertical="16dp"
        android:paddingHorizontal="16dp"/>

</LinearLayout>