<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="24dp"
    android:paddingVertical="16dp"
    tools:context=".library.ui.addplaylist.AddPlaylistFragment">

    <TextView
        android:id="@+id/header_title"
        style="@style/headerTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="28dp"
        android:gravity="center"
        android:text="@string/new_playlist"
        app:drawableStartCompat="@drawable/ic_close_screen_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/loadImageFrame"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="42dp"
        android:background="@drawable/photo_load_stroke"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_title">

        <ImageView
            android:id="@+id/placeholderImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/add_to_playlist"
            android:src="@drawable/ic_add_photo_100" />

        <ImageView
            android:id="@+id/loadImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:contentDescription="@string/add_to_playlist" />
    </FrameLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/titleEditTextLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/titleEditTextHint"
        android:textColorHint="@color/text_input_hint"
        app:boxStrokeColor="@color/text_input_stroke"
        app:cursorColor="@color/yp_blue"
        app:hintTextColor="@color/yp_blue"
        app:layout_constraintTop_toBottomOf="@+id/loadImageFrame">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/titleEditText"
            style="@style/regularTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/descriptionEditTextHint"
        android:textColorHint="@color/text_input_hint"
        app:boxStrokeColor="@color/text_input_stroke"
        app:cursorColor="@color/yp_blue"
        app:hintTextColor="@color/yp_blue"
        app:layout_constraintTop_toBottomOf="@+id/titleEditTextLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/descriptionEditText"
            style="@style/regularTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/createPlaylistBtn"
        style="@style/defaultBtnStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/btn_active_color"
        android:paddingVertical="13dp"
        android:enabled="false"
        android:text="@string/create_playlist"
        android:textSize="16sp"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>