<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bottom_sheet_shape"
    android:orientation="vertical"
    tools:context=".library.ui.playlistdetails.bottomsheetdialog.PlaylistBottomSheetFragment">

    <View
        android:layout_width="50dp"
        android:layout_height="4dp"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:background="@drawable/drag_shape" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginTop="20dp">

        <ImageView
            android:id="@+id/playlist_artwork"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/artWork"
            android:src="@drawable/ic_track_placeholder_45" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/playlist_title"
                style="@style/regularTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                tools:text="Best songs 2021" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tracks_count"
                    style="@style/regularTextStyle.11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textColor="?attr/colorOnSecondary"
                    tools:text="98 треков" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/shareBtn"
        style="@style/regularTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:paddingVertical="21dp"
        android:text="@string/sharePlaylist" />

    <TextView
        android:id="@+id/editBtn"
        style="@style/regularTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:paddingVertical="21dp"
        android:text="@string/editPlaylist" />

    <TextView
        android:id="@+id/deleteBtn"
        style="@style/regularTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:paddingVertical="21dp"
        android:text="@string/deletePlaylist" />
</LinearLayout>