<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.trackScreen.TrackActivity">

    <FrameLayout
        android:id="@+id/back_frame"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!--region кнопка назад-->
        <ImageButton
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:contentDescription="@string/back"
            android:src="@drawable/ic_close_screen_24" />
        <!--endregion-->
    </FrameLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/back_frame"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!--region гайдлайны-->
            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/leftGuideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="16dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/rightGuideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="16dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/topGuideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="16dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/bottomGuideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_end="16dp" />
            <!--endregion-->

            <!--region облога-->
            <ImageView
                android:id="@+id/track_artwork"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/artWork"
                android:src="@drawable/album"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toEndOf="@id/rightGuideline"
                app:layout_constraintStart_toStartOf="@id/leftGuideline"
                app:layout_constraintTop_toBottomOf="@id/topGuideline" />
            <!--endregion-->

            <!--region        название и артист-->
            <TextView
                android:id="@+id/track_name"
                style="@style/headerTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="@id/leftGuideline"
                app:layout_constraintTop_toBottomOf="@id/track_artwork"
                tools:text="Yesterday (Remastered 2009)" />

            <TextView
                android:id="@+id/artist_name"
                style="@style/mediumTextStyle.14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"

                app:layout_constraintStart_toStartOf="@id/leftGuideline"
                app:layout_constraintTop_toBottomOf="@id/track_name"
                tools:text="The Beatles" />
            <!--        endregion-->

            <!--region кнопки добавить, плей-->
            <ImageButton
                android:id="@+id/add_to_playlist_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:background="@color/transparent"
                android:contentDescription="@string/add_to_playlist"
                android:src="@drawable/ic_add_to_playlist_btn_51"
                app:layout_constraintBottom_toBottomOf="@id/play_btn"
                app:layout_constraintEnd_toStartOf="@id/play_btn"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="@id/leftGuideline"
                app:layout_constraintTop_toTopOf="@id/play_btn" />

            <ImageButton
                android:id="@+id/play_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@color/transparent"
                android:contentDescription="@string/play_track"
                android:src="@drawable/ic_play_btn_100"
                app:layout_constraintEnd_toStartOf="@id/add_to_fav_btn"
                app:layout_constraintStart_toEndOf="@id/add_to_playlist_btn"
                app:layout_constraintTop_toBottomOf="@id/artist_name" />

            <ImageButton
                android:id="@+id/add_to_fav_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:background="@color/transparent"
                android:contentDescription="@string/add_to_fav"
                android:src="@drawable/ic_add_to_fav_btn_51"
                app:layout_constraintBottom_toBottomOf="@id/play_btn"
                app:layout_constraintEnd_toEndOf="@id/rightGuideline"
                app:layout_constraintStart_toEndOf="@id/play_btn"
                app:layout_constraintTop_toTopOf="@id/play_btn" />

            <TextView
                android:id="@+id/track_time_now"
                style="@style/mediumTextStyle.14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                app:layout_constraintEnd_toEndOf="@id/rightGuideline"
                app:layout_constraintStart_toStartOf="@id/leftGuideline"
                app:layout_constraintTop_toBottomOf="@id/play_btn"
                tools:text="0:30" />
            <!--endregion кнопки добавить-->

            <!--region инфа о треке (метки)-->
            <TextView
                android:id="@+id/duration_textView"
                style="@style/regularTextStyle.13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:paddingVertical="8dp"
                android:text="@string/duration_text"
                android:textColor="@color/yp_text_gray"
                app:layout_constraintStart_toStartOf="@id/leftGuideline"
                app:layout_constraintTag="durationTag"
                app:layout_constraintTop_toBottomOf="@id/track_time_now" />

            <TextView
                android:id="@+id/album_textView"
                style="@style/regularTextStyle.13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="8dp"
                android:text="@string/album_text"
                android:textColor="@color/yp_text_gray"
                app:layout_constraintStart_toStartOf="@id/leftGuideline"
                app:layout_constraintTag="albumTag"
                app:layout_constraintTop_toBottomOf="@id/duration_textView" />

            <TextView
                android:id="@+id/year_textView"
                style="@style/regularTextStyle.13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="8dp"
                android:text="@string/year_text"
                android:textColor="@color/yp_text_gray"
                app:layout_constraintStart_toStartOf="@id/leftGuideline"
                app:layout_constraintTop_toBottomOf="@id/album_textView" />

            <TextView
                android:id="@+id/genre_textView"
                style="@style/regularTextStyle.13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="8dp"
                android:text="@string/genre_text"
                android:textColor="@color/yp_text_gray"
                app:layout_constraintStart_toStartOf="@id/leftGuideline"
                app:layout_constraintTag="genreTag"
                app:layout_constraintTop_toBottomOf="@id/year_textView" />

            <TextView
                android:id="@+id/country_textView"
                style="@style/regularTextStyle.13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="8dp"
                android:text="@string/country_text"
                android:textColor="@color/yp_text_gray"
                app:layout_constraintStart_toStartOf="@id/leftGuideline"
                app:layout_constraintTop_toBottomOf="@id/genre_textView" />
            <!--endregion-->

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/texts_barrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="end"
                app:constraint_referenced_tags="durationTag, albumTag, genreTag" />

            <!--region инфа о треке (из сети)-->
            <TextView
                android:id="@+id/track_time"
                style="@style/trackInfoTextStyle"
                android:layout_marginTop="30dp"
                app:layout_constraintEnd_toEndOf="@id/rightGuideline"
                app:layout_constraintStart_toEndOf="@id/texts_barrier"
                app:layout_constraintTop_toBottomOf="@id/track_time_now"
                app:layout_constraintVertical_chainStyle="packed"
                tools:text="5:35" />

            <TextView
                android:id="@+id/collection_name"
                style="@style/trackInfoTextStyle"
                app:layout_constraintEnd_toEndOf="@id/rightGuideline"
                app:layout_constraintStart_toEndOf="@id/texts_barrier"
                app:layout_constraintTop_toBottomOf="@id/track_time"
                tools:text="Yesterday (Remastered 2009)" />

            <TextView
                android:id="@+id/release_date"
                style="@style/trackInfoTextStyle"
                app:layout_constraintEnd_toEndOf="@id/rightGuideline"
                app:layout_constraintStart_toEndOf="@id/texts_barrier"
                app:layout_constraintTop_toBottomOf="@id/collection_name"
                tools:text="1965" />

            <TextView
                android:id="@+id/primary_genre_name"
                style="@style/trackInfoTextStyle"
                app:layout_constraintEnd_toEndOf="@id/rightGuideline"
                app:layout_constraintStart_toEndOf="@id/texts_barrier"
                app:layout_constraintTop_toBottomOf="@id/release_date"
                tools:text="Rock" />

            <TextView
                android:id="@+id/country"
                style="@style/trackInfoTextStyle"
                app:layout_constraintEnd_toEndOf="@id/rightGuideline"
                app:layout_constraintStart_toEndOf="@id/texts_barrier"
                app:layout_constraintTop_toBottomOf="@id/primary_genre_name"
                tools:text="Великобритания" />
            <!--endregion-->
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>